plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = '12ganzi'
version = '0.0.1-SNAPSHOT'
description = 'Codoc BE'

ext {
	bucket4jVersion = '8.16.1'
	sentryVersion = "8.33.0"
	awsSdkVersion = '2.42.13'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	implementation 'com.github.ben-manes.caffeine:caffeine'

	implementation platform("io.sentry:sentry-bom:${sentryVersion}")
	implementation 'io.sentry:sentry-spring-boot-4-starter'
	implementation 'io.sentry:sentry-async-profiler'

	implementation "com.bucket4j:bucket4j_jdk17-core:${bucket4jVersion}"
	implementation "com.bucket4j:bucket4j_jdk17-redis-common:${bucket4jVersion}"
	implementation "com.bucket4j:bucket4j_jdk17-lettuce:${bucket4jVersion}"

    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    implementation 'org.flywaydb:flyway-mysql'
    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'com.google.code.gson:gson:2.10.1'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-gson:0.12.5'

	implementation 'com.google.firebase:firebase-admin:9.7.1'
	implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")
	implementation 'software.amazon.awssdk:s3'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

checkstyle {
	toolVersion = '13.0.0'
	configDirectory = file('config/checkstyle')
	configFile = file('config/checkstyle/checkstyle.xml')
}

spotless {
	java {
		target 'src/**/*.java'
		googleJavaFormat()
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
        indentWithTabs(2)
        indentWithSpaces(4)
	}
}
dependencyManagement {
	imports {
		mavenBom "io.sentry:sentry-bom:$sentryVersion"
	}
}
